--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     },
     "main": "entry.js",
     "scripts": {
-        "kill": "taskkill /f /im node.exe",
-        "start": "node server.js",
-        "heroku-postbuild": "webpack -p --progress",
-        "build": "node ./node_modules/webpack/bin/webpack.js",
-        "build-watch": "node server.js && node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
-        "lint": "eslint entry.js app/**/*.js",
-        "test": "node ./node_modules/karma/bin/karma start --single-run",
-        "test-watch": "node ./node_modules/karma/bin/karma start"
+      "kill": "taskkill /f /im node.exe",
+      "build": "node ./node_modules/webpack/bin/webpack.js",
+      "build-watch": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+      "test": "node ./node_modules/karma/bin/karma start --single-run",
+      "test-watch": "node ./node_modules/karma/bin/karma start"
     },
     "keywords": [],
     "author": "",
