--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-    "name": "profolio",
-    "version": "1.0.0",
-    "description": "",
-    "engines": {
-        "node": "6.x"
-    },
-    "main": "entry.js",
-    "scripts": {
-      "kill": "taskkill /f /im node.exe",
-      "start": "node server.js",
-      "build": "node ./node_modules/webpack/bin/webpack.js",
-      "build-watch": "npm run start && node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js build --inline --hot",
-      "test": "node ./node_modules/karma/bin/karma start --single-run",
-      "test-watch": "node ./node_modules/karma/bin/karma start"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-
+  "name": "profolio",
+  "version": "1.0.0",
+  "description": "",
+  "engines": {
+    "node": "6.x"
+  },
+  "main": "entry.js",
+  "scripts": {
+    "kill": "taskkill /f /im node.exe",
+    "start": "node server.js",
+    "build": "node ./node_modules/webpack/bin/webpack.js",
+    "build-watch": "npm run start && node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "test": "node ./node_modules/karma/bin/karma start --single-run",
+    "test-watch": "node ./node_modules/karma/bin/karma start"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
     "angular-touch": "^1.6.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
+    "bootstrap": "^3.3.7",
     "bootstrap-sweetalert": "^1.0.1",
     "camelcase": "^3.0.0",
     "clean-webpack-plugin": "^0.1.15",
@@ -33,6 +33,7 @@
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
     "html-webpack-plugin": "^2.26.0",
+    "jquery": "^3.2.1",
     "ng-dialog": "^1.0.0",
     "ng-file-upload": "^12.2.13",
     "node-sass": "^4.3.0",
@@ -43,10 +44,10 @@
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
-  "babel-core": "^5.4.7",
-  "babel-loader": "^5.1.3",
-  "babel-preset-es2015": "^6.22.0",
-  "extract-text-webpack-plugin": "^1.0.1",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
+    "babel-preset-es2015": "^6.22.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "angular-mocks": "^1.6.1",
     "css-loader": "^0.26.4",
     "jasmine-core": "^2.5.2",
