--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
-    "angular-touch": "^1.6.1",
+    "angular-touch": "^1.6.4",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-sweetalert": "^1.0.1",
     "camelcase": "^3.0.0",
     "clean-webpack-plugin": "^0.1.15",
