--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "angular-touch": "^1.6.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "bootstrap-sweetalert": "^1.0.1",
     "camelcase": "^3.0.0",
     "clean-webpack-plugin": "^0.1.15",
@@ -44,12 +44,13 @@
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.1",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "babel-preset-es2015": "^6.22.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "angular-mocks": "^1.6.1",
     "css-loader": "^0.26.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.4",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
     "karma-jasmine": "^1.1.0",
@@ -57,7 +58,6 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.1",
     "style-loader": "^0.13.2",
-    "html-loader": "^0.4.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.16.2"
   }
