--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
+    "angular-cli-github-pages": "^0.2.0",
     "angular-mocks": "^1.6.1",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
