--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-watch": "npm run start && node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
     "test": "node ./node_modules/karma/bin/karma start --single-run",
     "test-watch": "node ./node_modules/karma/bin/karma start",
-    "heroku-postbuild": "webpack -p --progress"
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress"
   },
   "keywords": [],
   "author": "",
