--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "ui-router": "^1.0.0-alpha.3",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "angular-cli-github-pages": "^0.2.0",
