--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "sass-loader": "^4.1.1",
     "ui-router": "^1.0.0-alpha.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9"
-  },
-  "devDependencies": {
+    "webpack": "^1.12.9",
     "angular-cli-github-pages": "^0.2.0",
     "angular-mocks": "^1.6.1",
     "babel-core": "^5.4.7",
