--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "start": "node server.js",
     "build": "node ./node_modules/webpack/bin/webpack.js",
     "build-watch": "npm run start && node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
-    "heroku-postbuild": "webpack -p --progress",
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "deploy:WINDOWS": "set NODE_ENV=production && webpack -p && node server.js",
-    "deploy": "NODE_ENV=production webpack -p && node server.js",
-    "postinstall": "NODE_ENV=production webpack -p"
+    "heroku-postbuild": "webpack -p --progress"
   },
   "keywords": [],
   "author": "",
@@ -23,41 +19,40 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-animate": "^1.6.1",
+    "angular-cli-github-pages": "^0.2.0",
+    "angular-mocks": "^1.6.1",
     "angular-touch": "^1.6.4",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
     "animate.css": "^3.5.2",
-    "bootstrap": "^4.0.0-alpha.6",
-    "camelcase": "^3.0.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "dotenv": "^4.0.0",
-    "express": "^4.14.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
-    "ng-dialog": "^1.0.0",
-    "ng-file-upload": "^12.2.13",
-    "node-sass": "^4.3.0",
-    "pascalcase": "^0.1.1",
-    "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^4.1.1",
-    "ui-router": "^1.0.0-alpha.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "angular-cli-github-pages": "^0.2.0",
-    "angular-mocks": "^1.6.1",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "babel-preset-es2015": "^6.22.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "camelcase": "^3.0.0",
+    "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.4",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.1",
+    "ng-dialog": "^1.0.0",
+    "ng-file-upload": "^12.2.13",
+    "node-sass": "^4.3.0",
+    "pascalcase": "^0.1.1",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.2",
+    "ui-router": "^1.0.0-alpha.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.16.2"
   }
